Completed com feature

--- a/app/src/main/res/layout-sw600dp/layout_menu_item.xml
+++ b/app/src/main/res/layout-sw600dp/layout_menu_item.xml
@@ -38,6 +38,7 @@
             android:layout_width="@dimen/_20sdp"
             android:layout_height="@dimen/_20sdp"
             android:layout_alignParentEnd="true"
+            android:id="@+id/img_veg"
             android:src="@drawable/ic_veg" />
 
         <ImageView
