--- a/app/src/main/res/layout/layout_menu_item.xml
+++ b/app/src/main/res/layout/layout_menu_item.xml
@@ -34,6 +34,7 @@
         android:layout_height="@dimen/_10sdp"
         android:layout_alignParentEnd="true"
         android:elevation="@dimen/_10sdp"
+        android:id="@+id/img_veg"
         android:src="@drawable/ic_veg"/>
 
         <ImageView
