--- a/app/src/main/res/layout-sw720dp/dialog_redeem.xml
+++ b/app/src/main/res/layout-sw720dp/dialog_redeem.xml
@@ -6,6 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/white"
+        android:visibility="gone"
         android:id="@+id/relative_cart"
         >
         <ImageView
@@ -38,7 +39,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/view_redeem"
-        android:textSize="30sp"
+        android:textSize="35sp"
+        android:layout_centerHorizontal="true"
         android:id="@+id/txt_coupon_code"
         android:layout_marginTop="@dimen/_20sdp"
         android:layout_marginStart="@dimen/_25sdp"
@@ -63,7 +65,7 @@
             android:id="@+id/edit_coupon_code"
             android:textColor="@color/black"
             android:textColorHint="@color/cart_empty"
-            android:hint="@string/coupon_code"
+            android:hint="@string/coupon"
             android:background="@drawable/background_edit_grey"/>
         <TextView
             android:layout_width="match_parent"
