Finished final changes

--- a/app/src/main/res/layout-sw600dp/dialog_loyalty.xml
+++ b/app/src/main/res/layout-sw600dp/dialog_loyalty.xml
@@ -6,6 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/white"
+        android:visibility="gone"
         android:id="@+id/relative_cart"
         >
         <ImageView
@@ -38,7 +39,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/view_redeem"
-        android:textSize="25sp"
+        android:textSize="30sp"
         android:id="@+id/txt_loyalty_count"
         android:layout_marginTop="@dimen/_20sdp"
         android:layout_marginStart="@dimen/_25sdp"
@@ -57,7 +58,7 @@
             android:layout_height="wrap_content"
             android:padding="@dimen/_8sdp"
             android:layout_marginTop="@dimen/_10sdp"
-            android:textSize="25sp"
+            android:textSize="30sp"
             android:inputType="number"
             android:digits="1234567890"
             android:id="@+id/edit_loyalty"
@@ -74,8 +75,7 @@
             android:layout_margin="@dimen/_10sdp"
             android:padding="@dimen/_10sdp"
 
-            android:textSize="25sp"
-            android:layout_marginTop="@dimen/_10sdp"
+            android:textSize="30sp"
             android:gravity="center"
             android:id="@+id/txt_apply_loyalty"
             android:textColor="@color/white"
