--- a/app/src/main/res/layout-sw720dp/layout_menu_screen.xml
+++ b/app/src/main/res/layout-sw720dp/layout_menu_screen.xml
@@ -60,7 +60,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-
+                android:layout_toStartOf="@+id/relative_user"
                 android:layout_marginStart="@dimen/_15sdp"
                 android:layout_centerVertical="true"
                 android:layout_toEndOf="@+id/linear_logo"
@@ -76,6 +76,7 @@
                 android:layout_marginEnd="@dimen/_15sdp"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:layout_alignParentEnd="true"
+                android:id="@+id/relative_user"
                 >
                 <ImageView
                     android:layout_width="@dimen/_20sdp"
@@ -139,7 +140,6 @@
             tools:listitem="@layout/layout_menu_item"
             android:layout_marginBottom="@dimen/_10sdp"
             android:layout_toEndOf="@+id/linear_side_menu"
-            android:layout_marginStart="@dimen/_10sdp"
             android:layout_height="wrap_content"/>
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
