--- a/app/src/main/res/layout/dialog_loyalty.xml
+++ b/app/src/main/res/layout/dialog_loyalty.xml
@@ -6,6 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/white"
+        android:visibility="gone"
         android:id="@+id/relative_cart"
         >
         <ImageView
