--- a/app/src/main/res/layout-sw720dp/layout_banner.xml
+++ b/app/src/main/res/layout-sw720dp/layout_banner.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent">
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_80sdp"
+        android:layout_height="match_parent"
         android:scaleType="centerCrop"
         android:visibility="visible"
         android:layout_margin="@dimen/_10sdp"
