--- a/app/src/main/res/layout/layout_banner.xml
+++ b/app/src/main/res/layout/layout_banner.xml
@@ -2,10 +2,10 @@
 <RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black">
+    >
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_80sdp"
+        android:layout_height="match_parent"
         android:scaleType="centerCrop"
         android:visibility="visible"
         android:layout_margin="@dimen/_10sdp"
