Finished final changes reported over whatsapp

--- a/app/src/main/res/layout/layout_menu_item.xml
+++ b/app/src/main/res/layout/layout_menu_item.xml
@@ -43,7 +43,7 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="@dimen/_15sdp"
-            android:scaleType="fitCenter"
+            android:scaleType="centerCrop"
             android:src="@drawable/img_dosa" />
     <TextView
         android:layout_width="wrap_content"
