--- a/app/src/main/res/layout-sw600dp/layout_menu_item.xml
+++ b/app/src/main/res/layout-sw600dp/layout_menu_item.xml
@@ -43,11 +43,11 @@
 
         <ImageView
             android:id="@+id/img_menu_item"
-            android:layout_width="@dimen/_120sdp"
-            android:layout_height= "@dimen/_60sdp"
+            android:layout_width="match_parent"
+            android:layout_height= "wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="@dimen/_10sdp"
-            android:scaleType="fitCenter"
+            android:scaleType="centerCrop"
             android:src="@drawable/img_dosa" />
 
         <TextView
