--- a/app/src/main/res/layout-sw720dp/layout_menu_item.xml
+++ b/app/src/main/res/layout-sw720dp/layout_menu_item.xml
@@ -20,11 +20,11 @@
         android:id="@+id/img_veg"
         android:src="@drawable/ic_veg"/>
     <ImageView
-        android:layout_width="@dimen/_120sdp"
-        android:layout_height="@dimen/_60sdp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_10sdp"
         android:layout_centerHorizontal="true"
-        android:scaleType="fitCenter"
+        android:scaleType="centerCrop"
         android:src="@drawable/img_dosa"
         android:id="@+id/img_menu_item"/>
     <TextView
