--- a/app/src/main/res/layout-sw600dp/layout_cancel_order.xml
+++ b/app/src/main/res/layout-sw600dp/layout_cancel_order.xml
@@ -324,5 +324,10 @@
             android:textColor="@color/color_add"/>
 
     </LinearLayout>
-
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/progress_place_order"
+        android:visibility="gone"
+        android:layout_centerInParent="true"/>
 </RelativeLayout>
