--- a/app/src/main/res/layout-sw600dp/layout_thankyou.xml
+++ b/app/src/main/res/layout-sw600dp/layout_thankyou.xml
@@ -6,9 +6,10 @@
     android:layout_height="match_parent"
     android:background="@color/white">
     <ImageView
-        android:layout_width="@dimen/_35sdp"
-        android:layout_height="@dimen/_35sdp"
+        android:layout_width="@dimen/_50sdp"
+        android:layout_height="@dimen/_50sdp"
         android:layout_marginStart="@dimen/_15sdp"
+        android:layout_marginTop="@dimen/_15sdp"
         android:src="@drawable/img_arrow_lack"
         android:id="@+id/img_back"
         />
